force-app/main/default/objects/Tanque__c/Tanque__c.object-meta.xml
<CustomObject>
    <label>Tanque</label>
    <nameField>
        <label>Tanque Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tanques</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>