force-app/main/default/objects/Tanque__c/fields/Capacidad_Maxima_Tanque__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_Maxima_Tanque__c</fullName>
    <formula>Tipo_de_Tanque__r.Capacidad_Maxima__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacidad Máxima Tanque</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>