force-app/main/default/objects/Tanque__c/fields/Capacidad_Minima_Tanque__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_Minima_Tanque__c</fullName>
    <formula>Tipo_de_Tanque__r.Capacidad_Minima__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacidad Mínima Tanque</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>