force-app/main/default/objects/Tanque__c/fields/Capacidad_OLD__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_OLD__c</fullName>
    <inlineHelpText>Capacidad exacta (en litros o m³) de este tanque.</inlineHelpText>
    <label>Capacidad_OLD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>