force-app/main/default/objects/Tanque__c/fields/Link_Corto__c.field-meta.xml
<CustomField>
    <fullName>Link_Corto__c</fullName>
    <inlineHelpText>URL corta generada por Bitly para acceder directamente a este registro de tanque</inlineHelpText>
    <label>Link Corto</label>
    <type>Url</type>
</CustomField>