force-app/main/default/objects/Tanque__c/fields/Marca_del_Tanque__c.field-meta.xml
<CustomField>
    <fullName>Marca_del_Tanque__c</fullName>
    <formula>TEXT(Tipo_de_Tanque__r.Marca__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marca del Tanque</label>
    <type>Text</type>
</CustomField>