force-app/main/default/objects/Tanque__c/fields/Numero_de_Serie__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Serie__c</fullName>
    <description>Número de serie único para cada tanque.</description>
    <inlineHelpText>Identificador único y alfanumérico de este tanque.</inlineHelpText>
    <label>Número de Serie</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>