force-app/main/default/objects/Tanque__c/fields/Precio_Base_Tanque__c.field-meta.xml
<CustomField>
    <fullName>Precio_Base_Tanque__c</fullName>
    <formula>Tipo_de_Tanque__r.Precio_Base__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio Base Tanque</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>