force-app/main/default/objects/Tanque__c/fields/Precio_OLD__c.field-meta.xml
<CustomField>
    <fullName>Precio_OLD__c</fullName>
    <inlineHelpText>Precio de venta de este tanque específico.</inlineHelpText>
    <label>Precio_OLD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>