force-app/main/default/objects/Tanque__c/fields/Tipo_de_Tanque__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Tanque__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Indica el tipo o modelo de este tanque.</inlineHelpText>
    <label>Tipo de Tanque</label>
    <referenceTo>Tipo_de_Tanque__c</referenceTo>
    <relationshipLabel>Tanques</relationshipLabel>
    <relationshipName>Tanques</relationshipName>
    <type>Lookup</type>
</CustomField>